--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   },
   "dependencies": {
     "expo": "^49.0.8",
+    "expo-av": "~13.4.1",
     "expo-camera": "~13.4.2",
+    "expo-constants": "~14.4.2",
+    "ffmpeg-kit-react-native": "^6.0.0",
     "react": "18.2.0",
-    "react-native": "0.72.4"
+    "react-native": "0.72.4",
+    "react-native-compressor": "^1.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
