--- a/android/build.gradle
+++ b/android/build.gradle
@@ -10,11 +10,11 @@ buildscript {
         // We use NDK 23 which has both M1 support and is the side-by-side NDK version from AGP.
         ndkVersion = "23.1.7779620"
 
-        ffmpegKitPackage = "com.expocamera"
+        ffmpegKitPackage = "video-lts"
     }
     repositories {
-        jcenter()
         google()
+        jcenter()
         mavenCentral()
     }
     dependencies {
@@ -26,6 +26,7 @@ buildscript {
 
 allprojects {
     repositories {
+        google()
         mavenLocal()
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
@@ -39,7 +40,6 @@ allprojects {
         maven {
             url "$rootDir/../node_modules/expo-camera/android/maven"
         }
-        google()
         jcenter()
         mavenCentral()
         maven { url 'https://www.jitpack.io' }
