--- a/package.json
+++ b/package.json
@@ -10,14 +10,19 @@
     "test": "jest"
   },
   "dependencies": {
+    "@config-plugins/ffmpeg-kit-react-native": "^5.0.0",
     "expo": "^49.0.8",
     "expo-av": "~13.4.1",
+    "expo-build-properties": "~0.8.3",
     "expo-camera": "~13.4.2",
     "expo-constants": "~14.4.2",
-    "ffmpeg-kit-react-native": "^6.0.0",
+    "ffmpeg-kit-react-native": "^5.0.0",
+    "jszip": "^3.10.1",
     "react": "18.2.0",
     "react-native": "0.72.4",
-    "react-native-compressor": "^1.7.0"
+    "react-native-compressor": "^1.7.0",
+    "react-native-fs": "^2.20.0",
+    "react-native-zip-archive": "^6.0.9"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
