--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@config-plugins/ffmpeg-kit-react-native": "^5.0.0",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.16",
     "expo": "^49.0.8",
     "expo-av": "~13.4.1",
     "expo-build-properties": "~0.8.3",
@@ -22,6 +24,8 @@
     "react-native": "0.72.4",
     "react-native-compressor": "^1.7.0",
     "react-native-fs": "^2.20.0",
+    "react-native-safe-area-context": "^4.7.4",
+    "react-native-screens": "^3.27.0",
     "react-native-zip-archive": "^6.0.9"
   },
   "devDependencies": {
