--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "expo": "^49.0.8",
     "expo-av": "~13.4.1",
     "expo-build-properties": "~0.8.3",
-    "expo-camera": "~13.4.2",
+    "expo-camera": "^13.4.2",
     "expo-constants": "~14.4.2",
     "ffmpeg-kit-react-native": "^5.0.0",
     "jszip": "^3.10.1",
