--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-fs": "^2.20.0",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
+    "react-native-vision-camera": "^3.6.4",
     "react-native-zip-archive": "^6.0.9"
   },
   "devDependencies": {
