--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@config-plugins/ffmpeg-kit-react-native": "^5.0.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.16",
+    "add": "^2.0.6",
     "expo": "^49.0.8",
     "expo-av": "~13.4.1",
     "expo-build-properties": "~0.8.3",
@@ -27,7 +28,9 @@
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
     "react-native-vision-camera": "^3.6.4",
-    "react-native-zip-archive": "^6.0.9"
+    "react-native-webview": "^13.6.2",
+    "react-native-zip-archive": "^6.0.9",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
