--- a/ios/Podfile
+++ b/ios/Podfile
@@ -27,6 +27,7 @@ if linkage != nil
 end
 
 target 'expoCamera' do
+  pod 'ffmpeg-kit-react-native/https-gpl', :podspec => '../node_modules/ffmpeg-kit-react-native/ffmpeg-kit-react-native.podspec'
   use_expo_modules!
   post_integrate do |installer|
     begin
@@ -68,4 +69,6 @@ target 'expoCamera' do
     )
     __apply_Xcode_12_5_M1_post_install_workaround(installer)
   end
+  
+  # pod 'ffmpeg-kit-react-native', :subspecs => ['https-gpl'], :podspec => '../node_modules/ffmpeg-kit-react-native/ffmpeg-kit-react-native.podspec'
 end
